plugins {
    id 'eclipse'
    id 'idea'
    id 'maven-publish'
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
}

version = System.getenv("MOD_VERSION") ?: mod_version
group = mod_group_id

base {
    archivesName = "${mod_id}-forge"
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

println "Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}"
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true

    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {
            property 'forge.enabledGameTestNamespaces', mod_id
        }
        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
        }
        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }
    }
}

repositories {
    mavenCentral()
    maven { url = "https://maven.blamejared.com/" }
    maven { url "https://api.modrinth.com/maven" }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    compileOnly "mezz.jei:jei-1.20.1-forge-api:${jei_version}"
    runtimeOnly fg.deobf("mezz.jei:jei-1.20.1-forge:${jei_version}")
    
    compileOnly fg.deobf("maven.modrinth:ae2:7KVs6HMQ")
    // compileOnly "org.appliedenergistics:appliedenergistics2:${ae2_version}:api"
}

reobf {
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            artifact jar
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.register('syncVersion') {
    doLast {
        def version = mod_version
        def badgeVersion = version.replace('-', '--')

        def readmeFile = file('README.md')
        def readmeContent = readmeFile.text
        readmeContent = readmeContent.replaceAll(
            /(Version-)[^"<\s]+(-blue)/,
            "\$1${badgeVersion}\$2"
        )
        readmeContent = readmeContent.replaceAll(
            /alt="Version [^"]+"/,
            "alt=\"Version ${version}\""
        )
        readmeFile.text = readmeContent
        
        def readmeEnFile = file("README_EN.md")
        def readmeEnContent = readmeEnFile.text
        readmeEnContent = readmeEnContent.replaceAll(
                /(Version-)[^"<\s]+(-blue)/,
                "\$1${badgeVersion}\$2"
        )
        readmeEnContent = readmeEnContent.replaceAll(
                /alt="Version [^"]+"/,
                "alt=\"Version ${version}\""
        )
        readmeEnFile.text = readmeEnContent

        def releaseFile = file('release.md')
        def releaseContent = releaseFile.text
        releaseContent = releaseContent.replaceAll(/^# .+/, "# ${version}")
        releaseFile.text = releaseContent

        logger.error("Notice: current version is: ${version}")
    }
}
